deploy: 6710abb36b1de00ade79d134ac837a2150049f8a

--- a/user_guides/primitives_pipelines/primitives/find_anomalies.html
+++ b/user_guides/primitives_pipelines/primitives/find_anomalies.html
@@ -275,7 +275,7 @@
 <span class="gp">In [5]: </span><span class="n">index</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">array</span><span class="p">(</span><span class="nb">range</span><span class="p">(</span><span class="mi">100</span><span class="p">))</span>
 
 <span class="gp">In [6]: </span><span class="n">primitive</span><span class="o">.</span><span class="n">produce</span><span class="p">(</span><span class="n">errors</span><span class="o">=</span><span class="n">errors</span><span class="p">,</span> <span class="n">index</span><span class="o">=</span><span class="n">index</span><span class="p">)</span>
-<span class="gh">Out[6]: </span><span class="go">array([[4.40000000e+01, 5.50000000e+01, 5.46907894e-16]])</span>
+<span class="gh">Out[6]: </span><span class="go">array([[44.        , 55.        ,  2.19458128]])</span>
 </pre></div>
 </div>
 </section>
