--- a/_modules/orion/primitives/timeseries_anomalies.html
+++ b/_modules/orion/primitives/timeseries_anomalies.html
@@ -291,6 +291,7 @@
         <span class="n">z</span><span class="p">,</span> <span class="n">cost</span> <span class="o">=</span> <span class="n">best</span><span class="p">[</span><span class="mi">0</span><span class="p">:</span><span class="mi">2</span><span class="p">]</span>
         <span class="k">if</span> <span class="n">cost</span> <span class="o">&lt;</span> <span class="n">best_cost</span><span class="p">:</span>
             <span class="n">best_z</span> <span class="o">=</span> <span class="n">z</span><span class="p">[</span><span class="mi">0</span><span class="p">]</span>
+            <span class="n">best_cost</span> <span class="o">=</span> <span class="n">cost</span>
 
     <span class="k">return</span> <span class="n">mean</span> <span class="o">+</span> <span class="n">best_z</span> <span class="o">*</span> <span class="n">std</span>
 
