deploy: 601b1d4a1edce663b7e87501f59ae0b4d15fe531

--- a/_modules/orion/benchmark.html
+++ b/_modules/orion/benchmark.html
@@ -182,7 +182,7 @@
 
 <span class="n">LOGGER</span> <span class="o">=</span> <span class="n">logging</span><span class="o">.</span><span class="n">getLogger</span><span class="p">(</span><span class="vm">__name__</span><span class="p">)</span>
 
-<span class="n">BUCKET</span> <span class="o">=</span> <span class="s1">&#39;d3-ai-orion&#39;</span>
+<span class="n">BUCKET</span> <span class="o">=</span> <span class="s1">&#39;sintel-orion&#39;</span>
 <span class="n">S3_URL</span> <span class="o">=</span> <span class="s1">&#39;https://</span><span class="si">{}</span><span class="s1">.s3.amazonaws.com/</span><span class="si">{}</span><span class="s1">&#39;</span>
 
 <span class="n">BENCHMARK_PATH</span> <span class="o">=</span> <span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">join</span><span class="p">(</span>
