deploy: 070ef89937f154f5c68b061af5670d72c6570cfc

--- a/user_guides/primitives_pipelines/primitives/VAE.html
+++ b/user_guides/primitives_pipelines/primitives/VAE.html
@@ -312,29 +312,29 @@
 <span class="gp">In [5]: </span><span class="n">primitive</span><span class="o">.</span><span class="n">fit</span><span class="p">()</span>
 <span class="go">Epoch 1/5</span>
 
-<span class="go">1/1 [==============================] - ETA: 0s - loss: 0.8332</span>
-<span class="go">1/1 [==============================] - 0s 445us/step - loss: 0.8332</span>
+<span class="go">1/1 [==============================] - ETA: 0s - loss: 0.9616</span>
+<span class="go">1/1 [==============================] - 0s 426us/step - loss: 0.9616</span>
 <span class="go">Epoch 2/5</span>
 
-<span class="go">1/1 [==============================] - ETA: 0s - loss: 0.6821</span>
-<span class="go">1/1 [==============================] - 0s 404us/step - loss: 0.6821</span>
+<span class="go">1/1 [==============================] - ETA: 0s - loss: 0.9558</span>
+<span class="go">1/1 [==============================] - 0s 1ms/step - loss: 0.9558</span>
 <span class="go">Epoch 3/5</span>
 
-<span class="go">1/1 [==============================] - ETA: 0s - loss: 0.5886</span>
-<span class="go">1/1 [==============================] - 0s 409us/step - loss: 0.5886</span>
+<span class="go">1/1 [==============================] - ETA: 0s - loss: 0.8811</span>
+<span class="go">1/1 [==============================] - 0s 387us/step - loss: 0.8811</span>
 <span class="go">Epoch 4/5</span>
 
-<span class="go">1/1 [==============================] - ETA: 0s - loss: 0.3377</span>
-<span class="go">1/1 [==============================] - 0s 419us/step - loss: 0.3377</span>
+<span class="go">1/1 [==============================] - ETA: 0s - loss: 0.7178</span>
+<span class="go">1/1 [==============================] - 0s 443us/step - loss: 0.7178</span>
 <span class="go">Epoch 5/5</span>
 
-<span class="go">1/1 [==============================] - ETA: 0s - loss: 0.2320</span>
-<span class="go">1/1 [==============================] - 0s 418us/step - loss: 0.2320</span>
+<span class="go">1/1 [==============================] - ETA: 0s - loss: 0.6361</span>
+<span class="go">1/1 [==============================] - 0s 405us/step - loss: 0.6361</span>
 
 <span class="gp">In [6]: </span><span class="n">pred</span> <span class="o">=</span> <span class="n">primitive</span><span class="o">.</span><span class="n">produce</span><span class="p">(</span><span class="n">X</span><span class="o">=</span><span class="n">X</span><span class="p">)</span>
 
 <span class="gp">In [7]: </span><span class="n">pred</span><span class="o">.</span><span class="n">mean</span><span class="p">()</span>
-<span class="gh">Out[7]: </span><span class="go">0.6157458086372296</span>
+<span class="gh">Out[7]: </span><span class="go">0.256555117237492</span>
 </pre></div>
 </div>
 </section>
