--- a/user_guides/primitives_pipelines/primitives/VAE.html
+++ b/user_guides/primitives_pipelines/primitives/VAE.html
@@ -312,29 +312,29 @@
 <span class="gp">In [5]: </span><span class="n">primitive</span><span class="o">.</span><span class="n">fit</span><span class="p">()</span>
 <span class="go">Epoch 1/5</span>
 
-<span class="go">1/1 [==============================] - ETA: 0s - loss: 0.9377</span>
-<span class="go">1/1 [==============================] - 0s 457us/step - loss: 0.9377</span>
+<span class="go">1/1 [==============================] - ETA: 0s - loss: 0.9050</span>
+<span class="go">1/1 [==============================] - 2s 2s/step - loss: 0.9050</span>
 <span class="go">Epoch 2/5</span>
 
-<span class="go">1/1 [==============================] - ETA: 0s - loss: 0.8264</span>
-<span class="go">1/1 [==============================] - 0s 352us/step - loss: 0.8264</span>
+<span class="go">1/1 [==============================] - ETA: 0s - loss: 0.8664</span>
+<span class="go">1/1 [==============================] - 0s 23ms/step - loss: 0.8664</span>
 <span class="go">Epoch 3/5</span>
 
-<span class="go">1/1 [==============================] - ETA: 0s - loss: 0.5609</span>
-<span class="go">1/1 [==============================] - 0s 363us/step - loss: 0.5609</span>
+<span class="go">1/1 [==============================] - ETA: 0s - loss: 0.6562</span>
+<span class="go">1/1 [==============================] - 0s 23ms/step - loss: 0.6562</span>
 <span class="go">Epoch 4/5</span>
 
-<span class="go">1/1 [==============================] - ETA: 0s - loss: 0.5973</span>
-<span class="go">1/1 [==============================] - 0s 344us/step - loss: 0.5973</span>
+<span class="go">1/1 [==============================] - ETA: 0s - loss: 0.6765</span>
+<span class="go">1/1 [==============================] - 0s 22ms/step - loss: 0.6765</span>
 <span class="go">Epoch 5/5</span>
 
-<span class="go">1/1 [==============================] - ETA: 0s - loss: 0.6187</span>
-<span class="go">1/1 [==============================] - 0s 347us/step - loss: 0.6187</span>
+<span class="go">1/1 [==============================] - ETA: 0s - loss: 0.6675</span>
+<span class="go">1/1 [==============================] - 0s 23ms/step - loss: 0.6675</span>
 
 <span class="gp">In [6]: </span><span class="n">pred</span> <span class="o">=</span> <span class="n">primitive</span><span class="o">.</span><span class="n">produce</span><span class="p">(</span><span class="n">X</span><span class="o">=</span><span class="n">X</span><span class="p">)</span>
 
 <span class="gp">In [7]: </span><span class="n">pred</span><span class="o">.</span><span class="n">mean</span><span class="p">()</span>
-<span class="gh">Out[7]: </span><span class="go">0.5746066789872524</span>
+<span class="gh">Out[7]: </span><span class="go">0.3876208337680351</span>
 </pre></div>
 </div>
 </section>
