--- a/user_guides/primitives_pipelines/pipelines.html
+++ b/user_guides/primitives_pipelines/pipelines.html
@@ -416,39 +416,39 @@ Next, we test the new pipeline/hyperparameters in the benchmark and verify that 
 <span class="gp">In [8]: </span><span class="n">orion</span><span class="o">.</span><span class="n">fit</span><span class="p">(</span><span class="n">custom_data</span><span class="p">)</span>
 <span class="go">Epoch 1/5</span>
 
-<span class="go">1/4 [======&gt;.......................] - ETA: 8s - loss: 0.3317 - mse: 0.3317</span>
-<span class="go">2/4 [==============&gt;...............] - ETA: 1s - loss: 0.3517 - mse: 0.3517</span>
-<span class="go">3/4 [=====================&gt;........] - ETA: 0s - loss: 0.3666 - mse: 0.3666</span>
-<span class="go">4/4 [==============================] - ETA: 0s - loss: 0.3734 - mse: 0.3734</span>
-<span class="go">4/4 [==============================] - 5s 723ms/step - loss: 0.3775 - mse: 0.3775 - val_loss: 0.4204 - val_mse: 0.4204</span>
+<span class="go">1/4 [======&gt;.......................] - ETA: 11s - loss: 0.3896 - mse: 0.3896</span>
+<span class="go">2/4 [==============&gt;...............] - ETA: 1s - loss: 0.4002 - mse: 0.4002 </span>
+<span class="go">3/4 [=====================&gt;........] - ETA: 0s - loss: 0.3968 - mse: 0.3968</span>
+<span class="go">4/4 [==============================] - ETA: 0s - loss: 0.3966 - mse: 0.3966</span>
+<span class="go">4/4 [==============================] - 7s 959ms/step - loss: 0.3965 - mse: 0.3965 - val_loss: 0.4153 - val_mse: 0.4153</span>
 <span class="go">Epoch 2/5</span>
 
-<span class="go">1/4 [======&gt;.......................] - ETA: 1s - loss: 0.4445 - mse: 0.4445</span>
-<span class="go">2/4 [==============&gt;...............] - ETA: 1s - loss: 0.4244 - mse: 0.4244</span>
-<span class="go">3/4 [=====================&gt;........] - ETA: 0s - loss: 0.4163 - mse: 0.4163</span>
-<span class="go">4/4 [==============================] - ETA: 0s - loss: 0.4100 - mse: 0.4100</span>
-<span class="go">4/4 [==============================] - 2s 552ms/step - loss: 0.4062 - mse: 0.4062 - val_loss: 0.4205 - val_mse: 0.4205</span>
+<span class="go">1/4 [======&gt;.......................] - ETA: 2s - loss: 0.3797 - mse: 0.3797</span>
+<span class="go">2/4 [==============&gt;...............] - ETA: 1s - loss: 0.3941 - mse: 0.3941</span>
+<span class="go">3/4 [=====================&gt;........] - ETA: 0s - loss: 0.3921 - mse: 0.3921</span>
+<span class="go">4/4 [==============================] - ETA: 0s - loss: 0.3923 - mse: 0.3923</span>
+<span class="go">4/4 [==============================] - 3s 686ms/step - loss: 0.3924 - mse: 0.3924 - val_loss: 0.4188 - val_mse: 0.4188</span>
 <span class="go">Epoch 3/5</span>
 
-<span class="go">1/4 [======&gt;.......................] - ETA: 1s - loss: 0.3259 - mse: 0.3259</span>
-<span class="go">2/4 [==============&gt;...............] - ETA: 1s - loss: 0.3588 - mse: 0.3588</span>
-<span class="go">3/4 [=====================&gt;........] - ETA: 0s - loss: 0.3713 - mse: 0.3713</span>
-<span class="go">4/4 [==============================] - ETA: 0s - loss: 0.3770 - mse: 0.3770</span>
-<span class="go">4/4 [==============================] - 2s 530ms/step - loss: 0.3804 - mse: 0.3804 - val_loss: 0.4199 - val_mse: 0.4199</span>
+<span class="go">1/4 [======&gt;.......................] - ETA: 2s - loss: 0.4357 - mse: 0.4357</span>
+<span class="go">2/4 [==============&gt;...............] - ETA: 1s - loss: 0.3980 - mse: 0.3980</span>
+<span class="go">3/4 [=====================&gt;........] - ETA: 0s - loss: 0.3959 - mse: 0.3959</span>
+<span class="go">4/4 [==============================] - ETA: 0s - loss: 0.3949 - mse: 0.3949</span>
+<span class="go">4/4 [==============================] - 3s 723ms/step - loss: 0.3943 - mse: 0.3943 - val_loss: 0.4213 - val_mse: 0.4213</span>
 <span class="go">Epoch 4/5</span>
 
-<span class="go">1/4 [======&gt;.......................] - ETA: 1s - loss: 0.4420 - mse: 0.4420</span>
-<span class="go">2/4 [==============&gt;...............] - ETA: 1s - loss: 0.4271 - mse: 0.4271</span>
-<span class="go">3/4 [=====================&gt;........] - ETA: 0s - loss: 0.4162 - mse: 0.4162</span>
-<span class="go">4/4 [==============================] - ETA: 0s - loss: 0.4107 - mse: 0.4107</span>
-<span class="go">4/4 [==============================] - 2s 533ms/step - loss: 0.4073 - mse: 0.4073 - val_loss: 0.4226 - val_mse: 0.4226</span>
+<span class="go">1/4 [======&gt;.......................] - ETA: 2s - loss: 0.4142 - mse: 0.4142</span>
+<span class="go">2/4 [==============&gt;...............] - ETA: 1s - loss: 0.4150 - mse: 0.4150</span>
+<span class="go">3/4 [=====================&gt;........] - ETA: 0s - loss: 0.4035 - mse: 0.4035</span>
+<span class="go">4/4 [==============================] - ETA: 0s - loss: 0.4009 - mse: 0.4009</span>
+<span class="go">4/4 [==============================] - 3s 678ms/step - loss: 0.3993 - mse: 0.3993 - val_loss: 0.4236 - val_mse: 0.4236</span>
 <span class="go">Epoch 5/5</span>
 
-<span class="go">1/4 [======&gt;.......................] - ETA: 1s - loss: 0.3868 - mse: 0.3868</span>
-<span class="go">2/4 [==============&gt;...............] - ETA: 1s - loss: 0.4005 - mse: 0.4005</span>
-<span class="go">3/4 [=====================&gt;........] - ETA: 0s - loss: 0.4016 - mse: 0.4016</span>
-<span class="go">4/4 [==============================] - ETA: 0s - loss: 0.3994 - mse: 0.3994</span>
-<span class="go">4/4 [==============================] - 2s 541ms/step - loss: 0.3981 - mse: 0.3981 - val_loss: 0.4275 - val_mse: 0.4275</span>
+<span class="go">1/4 [======&gt;.......................] - ETA: 2s - loss: 0.4344 - mse: 0.4344</span>
+<span class="go">2/4 [==============&gt;...............] - ETA: 1s - loss: 0.4205 - mse: 0.4205</span>
+<span class="go">3/4 [=====================&gt;........] - ETA: 0s - loss: 0.4083 - mse: 0.4083</span>
+<span class="go">4/4 [==============================] - ETA: 0s - loss: 0.4039 - mse: 0.4039</span>
+<span class="go">4/4 [==============================] - 3s 712ms/step - loss: 0.4012 - mse: 0.4012 - val_loss: 0.4229 - val_mse: 0.4229</span>
 </pre></div>
 </div>
 </section>
