--- a/user_guides/primitives_pipelines/pipelines.html
+++ b/user_guides/primitives_pipelines/pipelines.html
@@ -416,39 +416,39 @@ Next, we test the new pipeline/hyperparameters in the benchmark and verify that 
 <span class="gp">In [8]: </span><span class="n">orion</span><span class="o">.</span><span class="n">fit</span><span class="p">(</span><span class="n">custom_data</span><span class="p">)</span>
 <span class="go">Epoch 1/5</span>
 
-<span class="go">1/4 [======&gt;.......................] - ETA: 9s - loss: 0.3814 - mse: 0.3814</span>
-<span class="go">2/4 [==============&gt;...............] - ETA: 1s - loss: 0.3810 - mse: 0.3810</span>
-<span class="go">3/4 [=====================&gt;........] - ETA: 0s - loss: 0.3868 - mse: 0.3868</span>
-<span class="go">4/4 [==============================] - ETA: 0s - loss: 0.3886 - mse: 0.3886</span>
-<span class="go">4/4 [==============================] - 6s 865ms/step - loss: 0.3896 - mse: 0.3896 - val_loss: 0.4207 - val_mse: 0.4207</span>
+<span class="go">1/4 [======&gt;.......................] - ETA: 11s - loss: 0.4200 - mse: 0.4200</span>
+<span class="go">2/4 [==============&gt;...............] - ETA: 1s - loss: 0.4101 - mse: 0.4101 </span>
+<span class="go">3/4 [=====================&gt;........] - ETA: 0s - loss: 0.4056 - mse: 0.4056</span>
+<span class="go">4/4 [==============================] - ETA: 0s - loss: 0.4021 - mse: 0.4021</span>
+<span class="go">4/4 [==============================] - 7s 932ms/step - loss: 0.4000 - mse: 0.4000 - val_loss: 0.4209 - val_mse: 0.4209</span>
 <span class="go">Epoch 2/5</span>
 
-<span class="go">1/4 [======&gt;.......................] - ETA: 2s - loss: 0.4604 - mse: 0.4604</span>
-<span class="go">2/4 [==============&gt;...............] - ETA: 1s - loss: 0.4523 - mse: 0.4523</span>
-<span class="go">3/4 [=====================&gt;........] - ETA: 0s - loss: 0.4339 - mse: 0.4339</span>
-<span class="go">4/4 [==============================] - ETA: 0s - loss: 0.4231 - mse: 0.4231</span>
-<span class="go">4/4 [==============================] - 3s 650ms/step - loss: 0.4166 - mse: 0.4166 - val_loss: 0.4214 - val_mse: 0.4214</span>
+<span class="go">1/4 [======&gt;.......................] - ETA: 2s - loss: 0.3823 - mse: 0.3823</span>
+<span class="go">2/4 [==============&gt;...............] - ETA: 1s - loss: 0.3888 - mse: 0.3888</span>
+<span class="go">3/4 [=====================&gt;........] - ETA: 0s - loss: 0.3902 - mse: 0.3902</span>
+<span class="go">4/4 [==============================] - ETA: 0s - loss: 0.3908 - mse: 0.3908</span>
+<span class="go">4/4 [==============================] - 3s 660ms/step - loss: 0.3911 - mse: 0.3911 - val_loss: 0.4218 - val_mse: 0.4218</span>
 <span class="go">Epoch 3/5</span>
 
-<span class="go">1/4 [======&gt;.......................] - ETA: 2s - loss: 0.3479 - mse: 0.3479</span>
-<span class="go">2/4 [==============&gt;...............] - ETA: 1s - loss: 0.3653 - mse: 0.3653</span>
-<span class="go">3/4 [=====================&gt;........] - ETA: 0s - loss: 0.3758 - mse: 0.3758</span>
-<span class="go">4/4 [==============================] - ETA: 0s - loss: 0.3802 - mse: 0.3802</span>
-<span class="go">4/4 [==============================] - 3s 661ms/step - loss: 0.3828 - mse: 0.3828 - val_loss: 0.4235 - val_mse: 0.4235</span>
+<span class="go">1/4 [======&gt;.......................] - ETA: 2s - loss: 0.4554 - mse: 0.4554</span>
+<span class="go">2/4 [==============&gt;...............] - ETA: 1s - loss: 0.4438 - mse: 0.4438</span>
+<span class="go">3/4 [=====================&gt;........] - ETA: 0s - loss: 0.4265 - mse: 0.4265</span>
+<span class="go">4/4 [==============================] - ETA: 0s - loss: 0.4178 - mse: 0.4178</span>
+<span class="go">4/4 [==============================] - 3s 716ms/step - loss: 0.4126 - mse: 0.4126 - val_loss: 0.4235 - val_mse: 0.4235</span>
 <span class="go">Epoch 4/5</span>
 
-<span class="go">1/4 [======&gt;.......................] - ETA: 2s - loss: 0.3834 - mse: 0.3834</span>
-<span class="go">2/4 [==============&gt;...............] - ETA: 1s - loss: 0.3967 - mse: 0.3967</span>
-<span class="go">3/4 [=====================&gt;........] - ETA: 0s - loss: 0.3926 - mse: 0.3926</span>
-<span class="go">4/4 [==============================] - ETA: 0s - loss: 0.3926 - mse: 0.3926</span>
-<span class="go">4/4 [==============================] - 3s 663ms/step - loss: 0.3926 - mse: 0.3926 - val_loss: 0.4237 - val_mse: 0.4237</span>
+<span class="go">1/4 [======&gt;.......................] - ETA: 2s - loss: 0.4584 - mse: 0.4584</span>
+<span class="go">2/4 [==============&gt;...............] - ETA: 1s - loss: 0.4383 - mse: 0.4383</span>
+<span class="go">3/4 [=====================&gt;........] - ETA: 0s - loss: 0.4221 - mse: 0.4221</span>
+<span class="go">4/4 [==============================] - ETA: 0s - loss: 0.4147 - mse: 0.4147</span>
+<span class="go">4/4 [==============================] - 3s 681ms/step - loss: 0.4102 - mse: 0.4102 - val_loss: 0.4255 - val_mse: 0.4255</span>
 <span class="go">Epoch 5/5</span>
 
-<span class="go">1/4 [======&gt;.......................] - ETA: 2s - loss: 0.4196 - mse: 0.4196</span>
-<span class="go">2/4 [==============&gt;...............] - ETA: 1s - loss: 0.4253 - mse: 0.4253</span>
-<span class="go">3/4 [=====================&gt;........] - ETA: 0s - loss: 0.4146 - mse: 0.4146</span>
-<span class="go">4/4 [==============================] - ETA: 0s - loss: 0.4089 - mse: 0.4089</span>
-<span class="go">4/4 [==============================] - 3s 696ms/step - loss: 0.4054 - mse: 0.4054 - val_loss: 0.4260 - val_mse: 0.4260</span>
+<span class="go">1/4 [======&gt;.......................] - ETA: 2s - loss: 0.3794 - mse: 0.3794</span>
+<span class="go">2/4 [==============&gt;...............] - ETA: 1s - loss: 0.3951 - mse: 0.3951</span>
+<span class="go">3/4 [=====================&gt;........] - ETA: 0s - loss: 0.3960 - mse: 0.3960</span>
+<span class="go">4/4 [==============================] - ETA: 0s - loss: 0.3957 - mse: 0.3957</span>
+<span class="go">4/4 [==============================] - 3s 699ms/step - loss: 0.3955 - mse: 0.3955 - val_loss: 0.4248 - val_mse: 0.4248</span>
 </pre></div>
 </div>
 </section>
