--- a/user_guides/primitives_pipelines/pipelines.html
+++ b/user_guides/primitives_pipelines/pipelines.html
@@ -416,39 +416,39 @@ Next, we test the new pipeline/hyperparameters in the benchmark and verify that 
 <span class="gp">In [8]: </span><span class="n">orion</span><span class="o">.</span><span class="n">fit</span><span class="p">(</span><span class="n">custom_data</span><span class="p">)</span>
 <span class="go">Epoch 1/5</span>
 
-<span class="go">1/4 [======&gt;.......................] - ETA: 8s - loss: 0.3649 - mse: 0.3649</span>
-<span class="go">2/4 [==============&gt;...............] - ETA: 1s - loss: 0.3670 - mse: 0.3670</span>
-<span class="go">3/4 [=====================&gt;........] - ETA: 0s - loss: 0.3726 - mse: 0.3726</span>
-<span class="go">4/4 [==============================] - ETA: 0s - loss: 0.3779 - mse: 0.3779</span>
-<span class="go">4/4 [==============================] - 5s 705ms/step - loss: 0.3811 - mse: 0.3811 - val_loss: 0.4211 - val_mse: 0.4211</span>
+<span class="go">1/4 [======&gt;.......................] - ETA: 13s - loss: 0.3997 - mse: 0.3997</span>
+<span class="go">2/4 [==============&gt;...............] - ETA: 1s - loss: 0.3964 - mse: 0.3964 </span>
+<span class="go">3/4 [=====================&gt;........] - ETA: 0s - loss: 0.3962 - mse: 0.3962</span>
+<span class="go">4/4 [==============================] - ETA: 0s - loss: 0.3961 - mse: 0.3961</span>
+<span class="go">4/4 [==============================] - 8s 1s/step - loss: 0.3960 - mse: 0.3960 - val_loss: 0.4222 - val_mse: 0.4222</span>
 <span class="go">Epoch 2/5</span>
 
-<span class="go">1/4 [======&gt;.......................] - ETA: 1s - loss: 0.3829 - mse: 0.3829</span>
-<span class="go">2/4 [==============&gt;...............] - ETA: 1s - loss: 0.3838 - mse: 0.3838</span>
-<span class="go">3/4 [=====================&gt;........] - ETA: 0s - loss: 0.3877 - mse: 0.3877</span>
-<span class="go">4/4 [==============================] - ETA: 0s - loss: 0.3892 - mse: 0.3892</span>
-<span class="go">4/4 [==============================] - 2s 532ms/step - loss: 0.3900 - mse: 0.3900 - val_loss: 0.4231 - val_mse: 0.4231</span>
+<span class="go">1/4 [======&gt;.......................] - ETA: 2s - loss: 0.3437 - mse: 0.3437</span>
+<span class="go">2/4 [==============&gt;...............] - ETA: 1s - loss: 0.3711 - mse: 0.3711</span>
+<span class="go">3/4 [=====================&gt;........] - ETA: 0s - loss: 0.3790 - mse: 0.3790</span>
+<span class="go">4/4 [==============================] - ETA: 0s - loss: 0.3823 - mse: 0.3823</span>
+<span class="go">4/4 [==============================] - 3s 811ms/step - loss: 0.3844 - mse: 0.3844 - val_loss: 0.4187 - val_mse: 0.4187</span>
 <span class="go">Epoch 3/5</span>
 
-<span class="go">1/4 [======&gt;.......................] - ETA: 1s - loss: 0.3877 - mse: 0.3877</span>
-<span class="go">2/4 [==============&gt;...............] - ETA: 1s - loss: 0.3744 - mse: 0.3744</span>
-<span class="go">3/4 [=====================&gt;........] - ETA: 0s - loss: 0.3798 - mse: 0.3798</span>
-<span class="go">4/4 [==============================] - ETA: 0s - loss: 0.3828 - mse: 0.3828</span>
-<span class="go">4/4 [==============================] - 2s 532ms/step - loss: 0.3846 - mse: 0.3846 - val_loss: 0.4238 - val_mse: 0.4238</span>
+<span class="go">1/4 [======&gt;.......................] - ETA: 2s - loss: 0.4050 - mse: 0.4050</span>
+<span class="go">2/4 [==============&gt;...............] - ETA: 1s - loss: 0.4009 - mse: 0.4009</span>
+<span class="go">3/4 [=====================&gt;........] - ETA: 0s - loss: 0.3987 - mse: 0.3987</span>
+<span class="go">4/4 [==============================] - ETA: 0s - loss: 0.3976 - mse: 0.3976</span>
+<span class="go">4/4 [==============================] - 3s 791ms/step - loss: 0.3969 - mse: 0.3969 - val_loss: 0.4174 - val_mse: 0.4174</span>
 <span class="go">Epoch 4/5</span>
 
-<span class="go">1/4 [======&gt;.......................] - ETA: 1s - loss: 0.4134 - mse: 0.4134</span>
-<span class="go">2/4 [==============&gt;...............] - ETA: 1s - loss: 0.3999 - mse: 0.3999</span>
-<span class="go">3/4 [=====================&gt;........] - ETA: 0s - loss: 0.3988 - mse: 0.3988</span>
-<span class="go">4/4 [==============================] - ETA: 0s - loss: 0.3975 - mse: 0.3975</span>
-<span class="go">4/4 [==============================] - 2s 531ms/step - loss: 0.3968 - mse: 0.3968 - val_loss: 0.4232 - val_mse: 0.4232</span>
+<span class="go">1/4 [======&gt;.......................] - ETA: 2s - loss: 0.4505 - mse: 0.4505</span>
+<span class="go">2/4 [==============&gt;...............] - ETA: 1s - loss: 0.4215 - mse: 0.4215</span>
+<span class="go">3/4 [=====================&gt;........] - ETA: 0s - loss: 0.4076 - mse: 0.4076</span>
+<span class="go">4/4 [==============================] - ETA: 0s - loss: 0.4034 - mse: 0.4034</span>
+<span class="go">4/4 [==============================] - 3s 788ms/step - loss: 0.4009 - mse: 0.4009 - val_loss: 0.4167 - val_mse: 0.4167</span>
 <span class="go">Epoch 5/5</span>
 
-<span class="go">1/4 [======&gt;.......................] - ETA: 1s - loss: 0.3774 - mse: 0.3774</span>
-<span class="go">2/4 [==============&gt;...............] - ETA: 1s - loss: 0.3683 - mse: 0.3683</span>
-<span class="go">3/4 [=====================&gt;........] - ETA: 0s - loss: 0.3759 - mse: 0.3759</span>
-<span class="go">4/4 [==============================] - ETA: 0s - loss: 0.3805 - mse: 0.3805</span>
-<span class="go">4/4 [==============================] - 2s 579ms/step - loss: 0.3832 - mse: 0.3832 - val_loss: 0.4214 - val_mse: 0.4214</span>
+<span class="go">1/4 [======&gt;.......................] - ETA: 2s - loss: 0.3499 - mse: 0.3499</span>
+<span class="go">2/4 [==============&gt;...............] - ETA: 1s - loss: 0.3724 - mse: 0.3724</span>
+<span class="go">3/4 [=====================&gt;........] - ETA: 0s - loss: 0.3812 - mse: 0.3812</span>
+<span class="go">4/4 [==============================] - ETA: 0s - loss: 0.3847 - mse: 0.3847</span>
+<span class="go">4/4 [==============================] - 3s 792ms/step - loss: 0.3869 - mse: 0.3869 - val_loss: 0.4181 - val_mse: 0.4181</span>
 </pre></div>
 </div>
 </section>
