--- a/user_guides/benchmarking.html
+++ b/user_guides/benchmarking.html
@@ -231,7 +231,7 @@
 </thead>
 <tbody>
 <tr class="row-even"><td><p>AER</p></td>
-<td><p>12</p></td>
+<td><p>11</p></td>
 </tr>
 <tr class="row-odd"><td><p>TadGAN</p></td>
 <td><p>7</p></td>
@@ -240,21 +240,24 @@
 <td><p>8</p></td>
 </tr>
 <tr class="row-odd"><td><p>LSTM Autoencoder</p></td>
-<td><p>8</p></td>
+<td><p>7</p></td>
 </tr>
 <tr class="row-even"><td><p>Dense Autoencoder</p></td>
 <td><p>7</p></td>
 </tr>
 <tr class="row-odd"><td><p>VAE</p></td>
-<td><p>8</p></td>
-</tr>
-<tr class="row-even"><td><p>GANF</p></td>
-<td><p>7</p></td>
-</tr>
-<tr class="row-odd"><td><p>Matrix Profile</p></td>
 <td><p>6</p></td>
 </tr>
-<tr class="row-even"><td><p>Azure</p></td>
+<tr class="row-even"><td><p>LNN</p></td>
+<td><p>7</p></td>
+</tr>
+<tr class="row-odd"><td><p>GANF</p></td>
+<td><p>5</p></td>
+</tr>
+<tr class="row-even"><td><p>Matrix Profile</p></td>
+<td><p>5</p></td>
+</tr>
+<tr class="row-odd"><td><p>Azure</p></td>
 <td><p>0</p></td>
 </tr>
 </tbody>
